Füge Content-Security-Policy hinzu

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Half-Life: Alyx Translation Tool</title>
+    <!-- Sicherheitsrichtlinie für Electron: verhindert Warnhinweise -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline';">
     <style>
         * {
             margin: 0;
