Fix Pfadzuordnung und DE-Anzeige

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -3434,7 +3434,7 @@ return `
             ${getDebugPathInfo(file)}
         </td>
         <td style="font-size: 11px; color: #666; word-break: break-all;">
-            ${dePath ? `sounds/DE/${dePath}` : ''}
+            ${dePath ? `✅ sounds/DE/${dePath}` : '❌'}
         </td>
         <td><button class="play-btn" onclick="playAudio(${file.id})">▶</button></td>
         <td>
@@ -4000,20 +4000,23 @@ function repairProjectFolders() {
 
 // =========================== EXTRACTRELEVANTFOLDER START ===========================
 function extractRelevantFolder(folderParts, fullPath) {
-    // Gibt den direkten Ordner der Datei zurück.
-    // Liegt die Datei in einem "vo"-Ordner, wird "vo/Ordnername" zurückgegeben.
+    // Gibt den relevanten Ordnerpfad einer Datei zurück.
+    // Enthält der Pfad einen "vo"-Ordner, liefern wir alles ab diesem Punkt
+    // (inklusive "vo") zurück, um die komplette Struktur zu bewahren.
 
     if (folderParts.length === 0) return 'root';
 
-    const last = folderParts[folderParts.length - 1];
-    const prev = folderParts[folderParts.length - 2];
+    const lowerParts = folderParts.map(p => p.toLowerCase());
+    const voIndex    = lowerParts.lastIndexOf('vo');
 
-    // Wenn das übergeordnete Verzeichnis "vo" heißt, füge es als Präfix hinzu
-    if (prev && prev.toLowerCase() === 'vo') {
-        return `vo/${last}`;
+    if (voIndex !== -1 && voIndex < folderParts.length) {
+        // Beispiel: ["sounds","vo","combine","grunt1"] => "vo/combine/grunt1"
+        return folderParts.slice(voIndex).join('/');
     }
 
-    return last;
+    // Entferne führendes "sounds" falls vorhanden
+    const startIndex = lowerParts[0] === 'sounds' ? 1 : 0;
+    return folderParts.slice(startIndex).join('/');
 }
 // =========================== EXTRACTRELEVANTFOLDER END ===========================
 
