Verbesserte Tabellenbreiten und Spaltennamen

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -107,7 +107,7 @@
         <th class="sortable">Ordner</th>
         <th>EN Text</th>
         <th>DE Text</th>
-        <th width="200" title="Debug: Aufgelöster Pfad">🔍 Aufgelöster Pfad</th>
+        <th width="200" title="Pfad der EN-Datei">EN-Pfad</th>
         <th width="200" title="Pfad der DE-Datei">DE Pfad</th>
         <th width="60">Upload</th>
         <th width="60">Historie</th>
