feat: globale Fortschrittsanzeige

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -75,6 +75,7 @@
                 <div class="progress-info">
                     <div class="progress-stat" id="totalProgress">0% vollständig</div>
                     <div class="progress-stat" id="folderProgress">0 Ordner</div>
+                    <div class="progress-stat" id="globalProjectProgress">0% gesamt</div>
                 </div>
             </div>
 
@@ -394,7 +395,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.16.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.17.0</a>
 
     <script src="src/main.js"></script>
 </body>
