feat: fehlende Ordner anzeigen

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -385,6 +385,19 @@
         </div>
     </div>
 
+    <!-- Missing Folders Dialog -->
+    <div class="dialog-overlay" id="missingFoldersDialog">
+        <div class="dialog">
+<button class="dialog-close-btn" onclick="closeMissingFoldersDialog()">×</button>
+            <h3>🚫 Fehlende Ordner</h3>
+            <div id="missingFoldersList" style="margin-bottom:15px;"></div>
+            <div class="dialog-buttons">
+                <button class="btn btn-danger" id="deleteAllMissingBtn">Alle löschen</button>
+                <button class="btn btn-secondary" onclick="closeMissingFoldersDialog()">Schließen</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Audio Player -->
     <audio id="audioPlayer"></audio>
     <input type="file" id="deUploadInput" style="display:none" accept=".mp3,.wav,.ogg" onchange="handleDeUpload(this)">
@@ -399,7 +412,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.19.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.20.0</a>
 
     <script src="src/main.js"></script>
 </body>
