feat: globale Fortschrittsbalken

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -79,6 +79,9 @@
                     <div class="progress-stat" id="folderProgress">0 Ordner</div>
                     <div class="progress-stat" id="globalProjectProgress">0% gesamt</div>
                 </div>
+                <div class="progress-bar" id="globalProjectBar">
+                    <div class="progress-fill" id="globalProjectFill"></div>
+                </div>
                 <div class="project-playback">
                     <button id="projectPlayPauseBtn" onclick="toggleProjectPlayback()">▶</button>
                     <button id="projectStopBtn" onclick="stopProjectPlayback()">⏹</button>
