Revert "Nutze Platzhalter für Version"

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -487,7 +487,7 @@
 
     <!-- Versionsanzeige -->
     <!-- Verlinkung zur aktuellen Version -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v__VERSION__</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.5</a>
 
     <script src="src/main.js"></script>
 </body>
