Füge Startoptionen für Half-Life Alyx hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -50,6 +50,12 @@
                 </div>
                 <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
                 <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
+                <div class="hla-launch">
+                    <button class="btn btn-secondary" onclick="startHla('normal','german')">HLA DE</button>
+                    <button class="btn btn-secondary" onclick="startHla('normal','english')">HLA EN</button>
+                    <button class="btn btn-secondary" onclick="startHla('tools','german')">Tools DE</button>
+                    <button class="btn btn-secondary" onclick="startHla('tools','english')">Tools EN</button>
+                </div>
             </div>
 			
 <!-- =========================== PROJECT META BAR START =========================== -->
