Playerfenster im 16:9 Format

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 			
-            <div id="ytPlayerBox" style="width:100%;height:360px;display:none"></div>
+            <div id="ytPlayerBox" class="yt-player" style="display:none"></div>
 <!-- =========================== PROJECT META BAR START =========================== -->
 <div class="project-meta-bar" id="projectMetaBar" style="display:none;">
     <span class="meta-project" id="metaProjectName"></span>
