Füge OCR-Debug-Fenster hinzu und verbessere Pipeline

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -576,6 +576,7 @@
                     <span id="videoDuration">0:00</span>
                     <button id="videoReload">🔄</button>
                     <button id="ocrToggle" title="OCR an/aus (F9)">🔍</button>
+                    <button id="ocrDebug" title="Debug-Fenster">🐞</button>
                     <button id="videoDelete">🗑️</button>
                     <button id="videoClose">❌</button>
                 </div>
