Verbesserte Dialogsteuerung und Grid

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -224,7 +224,7 @@
     </div>
 
     <!-- Import Dialog -->
-    <div class="dialog-overlay" id="importDialog">
+    <div class="dialog-overlay hidden" id="importDialog">
         <div class="dialog">
             <h3>📥 Daten importieren</h3>
             <p style="margin-bottom: 15px; color: #999;">
@@ -285,7 +285,7 @@
     </div>
 
     <!-- Closecaption Import Dialog -->
-    <div class="dialog-overlay" id="ccImportDialog">
+    <div class="dialog-overlay hidden" id="ccImportDialog">
         <div class="dialog">
             <h3>📥 Untertitel importieren</h3>
             <p>closecaption_english.txt: <span id="ccStatusEn"></span></p>
@@ -298,7 +298,7 @@
     </div>
 
     <!-- Folder Browser Dialog -->
-    <div class="dialog-overlay folder-browser-dialog" id="folderBrowserDialog">
+    <div class="dialog-overlay folder-browser-dialog hidden" id="folderBrowserDialog">
         <div class="dialog">
 <!-- =========================== DIALOG CLOSE BTN START =========================== -->
 <button class="dialog-close-btn" onclick="closeFolderBrowser()">×</button>
@@ -335,7 +335,7 @@
     </div>
 
     <!-- Backup Dialog -->
-    <div class="dialog-overlay" id="backupDialog">
+    <div class="dialog-overlay hidden" id="backupDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeBackupDialog()">×</button>
             <h3>💾 Backups</h3>
@@ -367,7 +367,7 @@
     </div>
 
     <!-- ElevenLabs API Dialog -->
-    <div class="dialog-overlay" id="apiDialog">
+    <div class="dialog-overlay hidden" id="apiDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeApiDialog()">×</button>
             <h3>🔊 ElevenLabs API</h3>
@@ -393,7 +393,7 @@
     </div>
 
     <!-- Neue Stimme Dialog -->
-    <div class="dialog-overlay" id="addVoiceDialog">
+    <div class="dialog-overlay hidden" id="addVoiceDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeAddVoiceDialog()">×</button>
             <h3>🆕 Neue Stimme</h3>
@@ -414,7 +414,7 @@
     </div>
 
     <!-- History Dialog -->
-    <div class="dialog-overlay" id="historyDialog">
+    <div class="dialog-overlay hidden" id="historyDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeHistoryDialog()">×</button>
             <h3>🕒 Historie</h3>
@@ -426,7 +426,7 @@
     </div>
 
     <!-- DE Edit Dialog -->
-    <div class="dialog-overlay" id="deEditDialog">
+    <div class="dialog-overlay hidden" id="deEditDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeDeEdit()">×</button>
             <h3>✂️ DE-Audio bearbeiten</h3>
@@ -486,7 +486,7 @@
     </div>
 
     <!-- Protokoll Dialog -->
-    <div class="dialog-overlay" id="dubbingLogDialog">
+    <div class="dialog-overlay hidden" id="dubbingLogDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeDubbingLog()">×</button>
             <h3>📝 Dubbing-Protokoll</h3>
@@ -501,7 +501,7 @@
     </div>
 
     <!-- Missing Folders Dialog -->
-    <div class="dialog-overlay" id="missingFoldersDialog">
+    <div class="dialog-overlay hidden" id="missingFoldersDialog">
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeMissingFoldersDialog()">×</button>
             <h3>🚫 Fehlende Ordner</h3>
